--- a/csRenamer/MainWindow.xaml
+++ b/csRenamer/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:csRenamer"
         mc:Ignorable="d"
-        Title="csRenamer" Height="600" Width="900" Background="{StaticResource Background}">
+        Title="csRenamer" Height="600" Width="900" Background="{StaticResource Background}" Icon="{StaticResource csRenamerIcon}">
     <DockPanel>
 
         <!-- Status Bar -->
