--- a/csRenamer/App.xaml
+++ b/csRenamer/App.xaml
@@ -10,6 +10,9 @@
                 <ResourceDictionary Source="Resources/Styles.xaml"/>
                 <ResourceDictionary Source="Resources/Icons.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+
+            <local:PathToIconConverter x:Key="PathToIconConverter"/>
         </ResourceDictionary>         
     </Application.Resources>
+    
 </Application>
