--- a/csRenamer/MainWindow.xaml
+++ b/csRenamer/MainWindow.xaml
@@ -54,12 +54,26 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Text="File Browser" Margin="5,5,5,0" FontWeight="Medium"/>
-                <TreeView Grid.Row="1" Margin="5">
-                    <TreeViewItem Header="C:\">
-                        <TreeViewItem Header="Users"/>
-                        <TreeViewItem Header="Program Files"/>
-                    </TreeViewItem>
+                <TextBlock Text="Folder Browser" Margin="5,5,5,0" FontWeight="Medium"/>
+                <TreeView Grid.Row="1" Margin="5" x:Name="treeView">
+                    <TreeView.Resources>
+                        <Style TargetType="{x:Type TreeViewItem}">
+                            <Setter Property="HeaderTemplate">
+                                <Setter.Value>
+                                    <DataTemplate>
+                                        <StackPanel Orientation="Horizontal">
+                                            <Image Name="img" Width="20" Height="20" Stretch="Fill"
+                                                   Source="{Binding RelativeSource={RelativeSource Mode=FindAncestor, 
+                                                AncestorType={x:Type TreeViewItem}},
+                                                Path=Header,
+                                                Converter={StaticResource PathToIconConverter}}"/>
+                                            <TextBlock Text="{Binding}" Margin="5,0" />
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </TreeView.Resources>
                 </TreeView>
             </Grid>
 
@@ -224,7 +238,7 @@
                                     <Button Grid.Column="3" Content="{StaticResource EditIcon}" Width="24" Height="24" Style="{StaticResource CloseButton}" VerticalAlignment="Center"
         Background="{StaticResource Button}" BorderBrush="{StaticResource ButtonBorder}" />
                                 </Grid>
-                                <TextBlock Text="Put the mouse over the text fields to get help on which patterns you can use" Margin="0,5" FontStyle="Italic"/>
+                                <TextBlock Text="Put the mouse over the text fields to get help on which patterns you can use" Margin="0,5" FontStyle="Italic"/>                                
                             </StackPanel>
                         </Grid>
                     </TabItem>
