--- a/csRenamer/MainWindow.xaml
+++ b/csRenamer/MainWindow.xaml
@@ -144,7 +144,7 @@
                         <Button Content="Rename" Margin="0,0,0,5" Style="{StaticResource ButtonWithText}" Tag="{StaticResource RenameIcon}" Width="90" Background="{StaticResource Button}"
                                 BorderBrush="{StaticResource ButtonBorder}"/>
                         <Button Content="Quit" Style="{StaticResource ButtonWithText}" Tag="{StaticResource QuitIcon}"  Width="90" Background="{StaticResource Button}"
-                                BorderBrush="{StaticResource ButtonBorder}"/>
+                                BorderBrush="{StaticResource ButtonBorder}" x:Name="quitButton" Click="quitButton_Click"/>
                     </StackPanel>
 
                     <Button Grid.Row="1" Content="{StaticResource QuestionIcon}" Width="30" Height="30" HorizontalAlignment="Right" Style="{StaticResource QuestionButton}" x:Name="aboutButton" Margin="0,0,20,10" />
